src/sass/mobile.scss
@media (max-width: 850px), (max-device-width: 850px) {
  & {
    margin: 0 auto;
    .aiusa-spinning-wheel {
      width: 100%;
      max-width: 100%;
      height: 100%;
      overflow-y: auto;
      &__container {
        border-radius: 0;
        display: block;
        min-height: 100%;
        margin-bottom: 0;
        overflow: hidden;
        .aiusa-spinning-wheel__content {
          h1,
          p {
            text-align: center;
            max-width: 90%;
            margin-left: auto;
            margin-right: auto;
          }
          h1 {
            font-size: 48px;
          }
          p {
            font-size: 16px;
            line-height: 1.5;
          }
          .aiusa-spinning-wheel__logo {
            position: absolute;
            top: 0;
            margin-top: 0;
            z-index: 3;
          }
          .aiusa-spinning-wheel__buttons {
            margin-left: auto;
            margin-right: auto;
          }
        }
        .close {
          backdrop-filter: blur(14px);
          background-color: rgba(255, 255, 255, 0.25);
          border-top-right-radius: 0;
        }
      }
      .aiusa-spinning-wheel__wheel {
        min-height: 44vh;
        width: 100%;
        padding-right: 0;
        border-radius: 0;
        &::before {
          content: "";
          background-image: url("https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1839/mobile-rim.jpg");
          width: 800px;
          height: 800px;
          position: absolute;
          top: -493px;
          left: 50%;
          transform: translateX(-50%);
          background-position: center bottom;
          background-size: contain;
        }
        &::after {
          content: "";
          background-image: url("https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1839/mobile-hub.png");
          width: 278px;
          height: 278px;
          position: absolute;
          z-index: 1;
          top: -230px;
          left: 50%;
          transform: translateX(-50%);
          background-position: center bottom;
          background-size: contain;
        }
        #the-wheel {
          width: 680px;
          height: 710px;
          position: absolute;
          right: inherit;
          bottom: 50px;
          left: 50%;
          top: inherit;
          transform: translateX(-50%);
          transform-origin: 50% 50%;
          svg {
            position: absolute;
          }
        }
        svg {
          &#wheel-indicator {
            transform: rotate(90deg) translateY(50%);
            bottom: 15px;
            right: initial;
            left: calc(50% - 15px);
            top: initial;
          }
        }
      }
    }
  }
}

